# elmsuite

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: automl.md  examples.md
elmsuite/: backend.py  interface.py
elmsuite/automl/: automl.py  data.py  predict.py  train.py  utils.py
elmsuite/framework/: choic.py  embedding.py  response.py  sequence.py
elmsuite/protein_language_models/: biolm_plm.py  ginkgo_plm.py  local_plm.py  together_plm.py
elmsuite/protein_language_models/utils/: esm_extract.py
examples/: CITATION
examples/gb1/: data.csv
examples/gb1/esm2_t33_650M_UR50D-output/: metrics.csv  test_0.csv  test_2.csv  test_4.csv  train_1.csv  train_2.csv  train_3.csv
examples/gb1/esm2_t33_650M_UR50D-output/embeddings/esm2_t33_650M_UR50D/: A20D.npy  A20E.npy  A20F.npy  A20G.npy  A20H.npy  A20I.npy  A20K.npy  A20L.npy  A20M.npy  A20N.npy  A20P.npy  A20Q.npy  A20R.npy  A20S.npy  A20T.npy  A20V.npy  A20Y.npy  A23D.npy  A23E.npy  A23F.npy  A23G.npy  A23H.npy  A23I.npy  A23K.npy  A23L.npy  A23M.npy  A23N.npy  A23P.npy  A23Q.npy  A23R.npy  A23S.npy  A23T.npy  A23V.npy  A23Y.npy  A24D.npy  A24E.npy  A24F.npy  A24G.npy  A24H.npy  A24I.npy  (+790 more)
examples/gb1/ginkgo-aa0-650M-output/: metrics.csv  preprocessed_data.csv  test_1.csv  test_3.csv  train_0.csv  train_4.csv
examples/gb1/ginkgo-aa0-650M-output/embeddings/ginkgo-aa0-650M/: A20D.npy  A20E.npy  A20F.npy  (+827 more)
plmsuite/: backend.py  interface.py
plmsuite/framework/: choic.py  embedding.py  response.py  sequence.py
plmsuite/protein_language_models/: biolm_plm.py  ginkgo_plm.py  together_plm.py
